2007-10-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/SOGoACLAdvisory.m ([SOGoACLAdvisory -subject]): 
	returns the subject as quoted-printable.

	* UI/SOGoUI/SOGoACLAdvisory.[hm]: added two intermediary classes:
	SOGoACLAdditionAdvisory and SOGoACLRemovalAdvisory implementing
	the "aclMethod" method for the subsequent language-dependent
	subclasses.

	* UI/SOGoUI/SOGoFolderAdvisory.m ([SOGoFolderAdvisory -subject]):
	returns the subject as quoted-printable.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-dealloc]): release item, aptStartDate and aptEndDate.

2007-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-initWithName:newNameinContainer:newContainer]): the owner of a
	shared folder is set to "nobody" by default.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -hasOwner]): new method
	that returns whether the object has an owner or not.

2007-10-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): create
	the folder even if the current user is not its owner.

2007-10-10  Ludovic Marcotte  <ludovic@inverse.ca>

	* We now send advisory emails when folders
	  are created / deleted.

	* Fixed the sending of advisory emails upon
	  ACL changes on folders.

2007-10-10  Ludovic Marcotte  <ludovic@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m
	Implemented event/task priority support.

	* SoObjects/Contacts/SOGoContactGCSFolder.m
	Added CardDAV support. 

	* SoObjects/SOGo/LDAPUserManager.m and SOGoUser.m
	Implemented From: based on LDAP results based on
	the MailFieldNames attribute (an array) specified
	in every LDAP-based authentication sources.

	* UI/MailPartViewers/UIxMailPartTextViewer.m and
	  UI/WebServerResources/MailerUI.css
	We avoid replacing "\r\n" and "\n" with <br /> and
	rather use CSS capabilities for proper formatting.
	This is _WAY_ faster on very large mails.
 