@@ -66,9 +66,18 @@
       <li><var:string label:value="Rename Folder..." /></li>
       <li><var:string label:value="Compact This Folder" /></li>
       <li><var:string label:value="Delete Folder" /></li>
+      <li><var:string label:value="Use This Folder For" /></li>
       <li><!-- separator --></li>
       <li><var:string label:value="Search Messages..." /></li>
       <li><var:string label:value="Sharing..." /></li>
+    </ul>
+  </div>
+
+  <div class="menu" id="folderTypeMenu">
+    <ul>
+      <li><var:string label:value="Sent Messages" /></li>
+      <li><var:string label:value="Drafts" /></li>
+      <li><var:string label:value="Deleted Messages" /></li>
     </ul>
   </div>
   
